src/apps/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-svc
  namespace: default
spec:
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9898
